# rust-solver-for-eternity-ii

./: .gitignore  Cargo.toml  README.md  TODO.md
.cargo/: config.toml
src/: autogen.rs  autogenfull.rs  autogenmids.rs  backtracker.rs  backtrackermidsonly.rs  celltype.rs  colour.rs  main.rs  ori.rs  paths.rs  store.rs  threadparams.rs
src/backtracker/: backtrackerfull.rs  backtrackermids.rs  mod.rs
