[package]
name = "rust-solver-for-eternity-ii"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
num_cpus = "1.15.0"
once_cell = "1.17.0"
rand = "0.8.5"
separator = "0.4.1"
string-builder = "0.2.0"
