[package]
name = "rust-solver-for-eternity-ii"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
num_cpus = "1.15.0"
rand = "0.8.5"
separator = "0.4.1"
string-builder = "0.2.0"

[features]
# Run multiple threads when enabled. Run one thread when disable.
mt = []
# Mutually exclusive.
backtracker-full = []
backtracker-mids = []

[profile.release]
# Recommended for performance: https://nnethercote.github.io/perf-book/build-configuration.html
panic = "abort"
strip = true
codegen-units = 1
lto = true
